Fixed map z-index

--- a/velo-a/public/css/app.css
+++ b/velo-a/public/css/app.css
@@ -1,14 +1,8 @@
-html {
-    margin: 0;
-    padding: 0;
-    height: 0;
-}
-
-body {
-    background: #b7d5ed;
-    margin: 0;
-    padding: 0;
-    height: 100%;
+html, body {
+	background: #b7d5ed;
+	margin: 0;
+	padding: 0;
+	height: 100%;
 }
 
 #map {
@@ -16,7 +10,6 @@ body {
     top: 0;
     bottom: 0;
     width: 80%;
-    z-index: -1;
     right: 0;
 }
 
